Fix SecurityConfig to use environment variable for CORS allowed origins instead of hardcoded localhost